--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,5 +70,8 @@
     "C_Cpp.errorSquiggles": "Disabled",
     "mdmath.delimiters": "dollars",
     "mdmath.macros": {},
-    "mdmath.autosave": false
+    "mdmath.autosave": false,
+    "intelliSenseMode": "clang-x64", // 注意修改, 提供智能提示
+    "cmake.cmakePath":"cmake",
+    "cmake.sourceDirectory":"D:\\DataStructuresAndAlgorithms\\MyDSA\\Test\\"
 }
