--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,9 @@
         "xstddef": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "map": "cpp",
+        "xtree": "cpp"
     },
     "git.ignoreLimitWarning": true,
     "files.autoSave": "onFocusChange",
