--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,7 +64,9 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "map": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "deque": "cpp",
+        "vector": "cpp"
     },
     "git.ignoreLimitWarning": true,
     "files.autoSave": "onFocusChange",
