解决cmake问题成功编译vector

--- a/MyDSA/Vector/CMakeLists.txt
+++ b/MyDSA/Vector/CMakeLists.txt
@@ -2,5 +2,7 @@
 # 并将名称保存到 DIR_LIB_SRCS 变量
 aux_source_directory(. DIR_LIB_SRCS)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/)
+
+include_directories(../fibnacci/)
 # 生成链接库
-add_library (MathFunctions ${DIR_LIB_SRCS})
+add_library (Vector ${DIR_LIB_SRCS})
